--- a/front/Restorumba/app/src/main/res/layout/activity_order.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order.xml
@@ -18,18 +18,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/link_to_profile"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="10dp"
-        android:background="@mipmap/ic_profile_picture_2_foreground"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView21"
+        android:clickable="true"
+        android:focusable="true"
+        android:id="@+id/link_to_restaurant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -41,69 +33,92 @@
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
+    <ImageButton
+        android:id="@+id/link_to_profile"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="10dp"
+        android:background="@mipmap/ic_profile_picture_2_foreground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <HorizontalScrollView
+        android:id="@+id/hs"
         android:layout_width="330dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/rounded_rectangle_20_radius_shape"
-        android:backgroundTint="@color/white"
-        app:circularflow_defaultRadius="30dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/link_to_profile">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="@font/nunito_bold"
-            android:text="@string/drinks"
-            android:textSize="16sp"
-            style="@style/TextColor"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
+            android:layout_width="330dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="44dp"
+            android:background="@color/white"
+            app:circularflow_defaultRadius="30dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/link_to_profile">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="@font/nunito_bold"
-            android:text="@string/combos"
-            android:textSize="16sp"
-            style="@style/TextColor"
-            app:layout_constraintStart_toEndOf="@+id/textView5"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/c1"
+                style="@style/TextColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="7dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="*****"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="@font/nunito_bold"
-            android:text="@string/snacks"
-            android:textSize="16sp"
-            style="@style/TextColor"
-            app:layout_constraintStart_toEndOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/c2"
+                style="@style/TextColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="7dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="*****"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/c1"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="@font/nunito_bold"
-            android:text="@string/salads"
-            android:textSize="16sp"
-            style="@style/TextColor"
-            app:layout_constraintStart_toEndOf="@+id/textView15"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/c3"
+                style="@style/TextColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="7dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="*****"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/c2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/c4"
+                android:clickable="true"
+                android:focusable="true"
+                style="@style/TextColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="7dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="*****"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/c3"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="50dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </HorizontalScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout7"
@@ -114,10 +129,20 @@
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/hs">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/dish_description"
+            app:layout_constraintTop_toTopOf="@+id/dish_description"
+            android:visibility="gone"/>
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/dish_photo"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginStart="20dp"
@@ -127,7 +152,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView16"
+            android:id="@+id/dish_name"
             style="@style/TextColor"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -135,11 +160,11 @@
             android:fontFamily="@font/nunito_bold"
             android:text="@string/current_dish"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView8"
-            app:layout_constraintTop_toTopOf="@+id/imageView8" />
+            app:layout_constraintStart_toEndOf="@+id/dish_photo"
+            app:layout_constraintTop_toTopOf="@+id/dish_photo" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/dish_price"
             style="@style/PriceColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -148,8 +173,8 @@
             android:fontFamily="@font/nunito_bold"
             android:text="@string/current_price"
             android:textSize="20sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView16" />
+            app:layout_constraintStart_toEndOf="@+id/dish_photo"
+            app:layout_constraintTop_toBottomOf="@+id/dish_name" />
 
         <TextView
             android:id="@+id/textView19"
@@ -162,10 +187,10 @@
             android:text="@string/desc_title"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+            app:layout_constraintTop_toBottomOf="@+id/dish_photo" />
 
         <TextView
-            android:id="@+id/textView20"
+            android:id="@+id/dish_description"
             style="@style/TextColor"
             android:layout_width="256dp"
             android:layout_height="wrap_content"
@@ -178,17 +203,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView19" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="25dp"
-            android:background="@drawable/add"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/textView20"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView20" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
