--- a/front/Restorumba/app/src/main/res/layout/activity_order_history.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_order_history.xml
@@ -20,26 +20,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout5"
-        android:layout_width="320dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="30dp"
+    <TextView
         android:background="@drawable/rounded_rectangle_20_radius_shape"
         android:backgroundTint="@color/white"
+        android:layout_width="260dp"
+        android:layout_height="96dp"
+        android:text="Эта функция будет доступна позже"
+        android:fontFamily="@font/nunito_semibold"
+        android:textSize="24sp"
+        android:textColor="#170C10"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="320dp"
-        android:layout_height="80dp"
-        android:background="@drawable/rounded_rectangle_20_radius_shape"
-        android:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
-        android:layout_marginTop="37dp"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/back"
