--- a/front/Restorumba/app/src/main/res/layout/activity_restaurant.xml
+++ b/front/Restorumba/app/src/main/res/layout/activity_restaurant.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/link_to_profile"
+        android:id="@+id/link_to_order"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginEnd="22dp"
@@ -36,7 +36,7 @@
         android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/link_to_profile">
+        app:layout_constraintTop_toBottomOf="@+id/link_to_order">
 
         <ImageView
             android:id="@+id/imageView5"
@@ -54,7 +54,8 @@
             android:layout_marginStart="11dp"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="3dp"/>
+            android:layout_marginTop="3dp"
+            android:singleLine="true"/>
 
         <ScrollView
             android:layout_width="283dp"
@@ -64,121 +65,165 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="66dp">
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="267dp"
-                android:layout_height="43dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Burger King"
-                    android:textColor="#170C10"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="4dp"/>
-
-                <EditText
-                    android:id="@+id/editText"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout9"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="Сыромолотова 14"
-                    android:textColorHint="#787878"
-                    android:textSize="14sp"
+                    android:layout_height="45dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView9"
-                    android:layout_marginTop="-10dp"/>
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="Вкусно и точка"
-                    android:textColor="#170C10"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText"
-                    android:layout_marginTop="30dp"/>
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:text="Burger King"
+                        android:textColor="#170C10"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-                <EditText
-                    android:id="@+id/editText2"
+                    <EditText
+                        android:id="@+id/editText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView13"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginStart="-4dp"
+                        android:textSize="14sp"
+                        android:hint="Сыромолотова 14"
+                        android:enabled="false"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout10"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="Малышева 138"
-                    android:textColorHint="#787878"
-                    android:textSize="14sp"
+                    android:layout_height="46dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView10"
-                    android:layout_marginTop="-10dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout9"
+                    android:layout_marginTop="30dp">
+                    <TextView
+                        android:id="@+id/textView14"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:text="Вкусно и точка"
+                        android:textColor="#170C10"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-                <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="Rostic’s"
-                    android:textColor="#170C10"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText2"
-                    android:layout_marginTop="30dp"/>
+                    <EditText
+                        android:id="@+id/editText2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView14"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginStart="-4dp"
+                        android:textSize="14sp"
+                        android:hint="Малышева 138"
+                        android:enabled="false"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <EditText
-                    android:id="@+id/editText3"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout11"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="Ленина 31"
-                    android:textSize="14sp"
+                    android:layout_height="46dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView11"
-                    android:textColorHint="#787878"
-                    android:layout_marginTop="-10dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout10"
+                    android:layout_marginTop="30dp">
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:text="Rostic’s"
+                        android:textColor="#170C10"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="Хорошая компания"
-                    android:textColor="#170C10"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText3"
-                    android:layout_marginTop="30dp"/>
+                    <EditText
+                        android:id="@+id/editText3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView15"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginStart="-4dp"
+                        android:textSize="14sp"
+                        android:hint="Ленина 31"
+                        android:enabled="false"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <EditText
-                    android:id="@+id/editText4"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintLayout12"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="Коминтерна 5"
-                    android:textSize="14sp"
+                    android:layout_height="46dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView12"
-                    android:textColorHint="#787878"
-                    android:layout_marginTop="-10dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout11"
+                    android:layout_marginTop="30dp">
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:text="Хорошая компания"
+                        android:textColor="#170C10"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
-                    android:text="Tom Yum Bar"
-                    android:textColor="#170C10"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText4"
-                    android:layout_marginTop="30dp"/>
+                    <EditText
+                        android:id="@+id/editText4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView16"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginStart="-4dp"
+                        android:textSize="14sp"
+                        android:hint="Коминтерна 5"
+                        android:enabled="false"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <EditText
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/tyb"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="Малышева 44"
-                    android:textSize="14sp"
+                    android:layout_height="46dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView13"
-                    android:textColorHint="#787878"
-                    android:layout_marginTop="-10dp"/>
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout12"
+                    android:layout_marginTop="30dp">
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nunito_semibold"
+                        android:text="Tom Yum Bar"
+                        android:textColor="#170C10"
+                        android:textSize="16sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <EditText
+                        android:id="@+id/editText5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView17"
+                        android:layout_marginTop="-10dp"
+                        android:layout_marginStart="-4dp"
+                        android:textSize="14sp"
+                        android:hint="Малышева 44"
+                        android:enabled="false"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -194,6 +239,7 @@
         android:layout_marginTop="24dp">
 
         <TextView
+            android:id="@+id/chosen_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/nunito_semibold"
@@ -216,6 +262,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
+        android:id="@+id/save"
         android:layout_width="150dp"
         android:layout_height="36dp"
         android:backgroundTint="#FF222C"
